# GDCA

./: .gitattributes  .gitignore  README.md  comparison_result.html  index.html  pyproject.toml  test_config_load.py
.agent/: GEMINI.md
.agent/skills/project-helpers/: SKILL.md
.agent/workflows/: deploy.md  run-backtest.md  test.md
.github/workflows/: daily_backtest.yml
backtest/: __init__.py  data_processor.py  engine.py  metrics.py  simulator.py
catalog/data/bar/BTCUSD.BITSTAMP-1-DAY-LAST-EXTERNAL/: 2011-08-18T00-00-00-000000000Z_2026-01-12T00-00-00-000000000Z.parquet  2011-08-18T00-00-00-000000000Z_2026-01-13T00-00-00-000000000Z.parquet  2011-08-18T00-00-00-000000000Z_2026-01-14T00-00-00-000000000Z.parquet  2026-01-13T00-00-00-000000000Z_2026-01-13T00-00-00-000000000Z.parquet  2026-01-14T00-00-00-000000000Z_2026-01-14T00-00-00-000000000Z.parquet  2026-01-15T00-00-00-000000000Z_2026-01-15T00-00-00-000000000Z.parquet  2026-01-16T00-00-00-000000000Z_2026-01-16T00-00-00-000000000Z.parquet  2026-01-17T00-00-00-000000000Z_2026-01-17T00-00-00-000000000Z.parquet  part-0.parquet
config/: settings.py
scripts/: download_data.py  run_backtest.py
strategies/: gdca_pinescript.txt  gdca_strategy.py
templates/: __init__.py  base.html  comparison.html  index.html  renderer.py  report_generator.py  strategy.html
visualization/: __init__.py  chart_data.py  html_generator.py
