[project]
name = "gdca"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "nautilus-trader (>=1.221.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "ccxt (>=4.5.24,<5.0.0)",
    "plotly (>=5.18.0,<6.0.0)",
    "nbformat (>=5.9.0,<6.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "jinja2 (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

